--- a/usr/var/www/callblocker/package.json
+++ b/usr/var/www/callblocker/package.json
@@ -5,20 +5,20 @@
     "url": "git+https://github.com:pamapa/callblocker.git"
   },
   "devDependencies": {
-    "webpack": "4.29.5",
-    "webpack-cli": "3.1.0",
-    "copy-webpack-plugin": "4.5.1",
-    "uglifyjs-webpack-plugin": "~2.1.1",
-    "dojo-webpack-plugin": "2.8.5",
-    "style-loader": "0.20.3",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "3.0.0",
-    "less-loader": "4.1.0",
-    "less": "2.7.1",
-    "url-loader": "1.0.1",
+    "dijit": "~1.14.0",
     "dojo": "~1.14.0",
     "dojo-util": "~1.14.0",
-    "dijit": "~1.14.0",
-    "dojox": "~1.14.0"
+    "dojo-webpack-plugin": "2.8.5",
+    "dojox": "~1.14.0",
+    "less": "2.7.1",
+    "less-loader": "4.1.0",
+    "style-loader": "0.20.3",
+    "terser-webpack-plugin": "^2.3.1",
+    "url-loader": "1.0.1",
+    "webpack": "4.29.5",
+    "webpack-cli": "3.1.0"
   },
   "scripts": {
     "build": "webpack",
