fix: #68 rename whitelist/blacklist to allowlist/blocklist

--- a/etc/callblocker/meson.build
+++ b/etc/callblocker/meson.build
@@ -3,10 +3,10 @@ install_data(['tpl_settings.json', 'README.md'],
              install_dir: join_paths(path_sysconfdir, 'callblocker'))
 
 # create directories and install README.md
-install_subdir('blacklists',
+install_subdir('blocklists',
                install_mode: ['rw-r--r--', 'www-data', 'www-data'],
                install_dir: join_paths(path_sysconfdir, 'callblocker'))
-install_subdir('whitelists',
+install_subdir('allowlists',
                install_mode: ['rw-r--r--', 'www-data', 'www-data'],
                install_dir: join_paths(path_sysconfdir, 'callblocker'))
 install_subdir('cache',
