--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
+.vscode
 *.o
 
 build/
@@ -17,4 +18,3 @@ usr/var/www/callblocker/js/yarn.lock
 test/callblockerd/unit_tests
 third-party/pjproject/pjproject-2.8.tar.bz2
 third-party/pjproject/pjproject-2.8
-
