--- a/meson.build
+++ b/meson.build
@@ -33,6 +33,7 @@ endif
 
 subdir('third-party/pjproject')
 subdir('src')
+subdir('src-web')
 subdir('usr/share')
 subdir('usr/var/www')
 subdir('etc/callblocker')
