--- a/src-web/package.json
+++ b/src-web/package.json
@@ -16,8 +16,10 @@
     "url-loader": "1.0.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "~5.1.2",
     "dojo-webpack-plugin": "~2.8.17",
+    "html-webpack-plugin": "^4.5.0",
     "terser-webpack-plugin": "~2.3.8",
     "webpack": "~4.44.1",
     "webpack-cli": "~3.3.12"
