--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -22,12 +22,12 @@ jobs:
         CI: true
 
     - name: Install dependencies
-      working-directory: usr/var/www/callblocker
+      working-directory: src-web
       run: |
         npm install
 
     - name: Build
-      working-directory: usr/var/www/callblocker
+      working-directory: src-web
       run: |
         npm run build
 
@@ -35,5 +35,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: dist
-        path: usr/var/www/callblocker/dist
-
+        path: src-web/dist
