--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: Test
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         arch: [amd64]
-        debian-version: [buster]
+        debian-version: [bullseye]
 
     container:
       image: ${{ matrix.arch }}/debian:${{ matrix.debian-version }}-slim
@@ -32,7 +32,6 @@ jobs:
           python3-pip python3-setuptools python3-wheel \
           g++ gcc \
           libjson-c-dev libphonenumber-dev uuid-dev libssl-dev
-        pip3 install "meson>=0.50.1"
         meson -v
 
     - name: Execute unit tests
