--- a/web/package.json
+++ b/web/package.json
@@ -5,24 +5,24 @@
     "url": "git+https://github.com:pamapa/callblocker.git"
   },
   "dependencies": {
-    "css-loader": "3.0.0",
     "dijit": "~1.16.3",
     "dojo": "~1.16.3",
     "dojo-util": "~1.16.3",
-    "dojox": "~1.16.3",
-    "less": "2.7.1",
-    "less-loader": "4.1.0",
-    "style-loader": "0.20.3",
-    "url-loader": "1.0.1"
+    "dojox": "~1.16.3"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "~3.0.0",
     "copy-webpack-plugin": "~5.1.2",
-    "dojo-webpack-plugin": "~2.8.17",
-    "html-webpack-plugin": "^4.5.0",
-    "terser-webpack-plugin": "~2.3.8",
-    "webpack": "~4.44.1",
-    "webpack-cli": "~3.3.12"
+    "css-loader": "~5.2.4",
+    "dojo-webpack-plugin": "~2.8.19",
+    "html-webpack-plugin": "~4.5.2",
+    "less": "~4.1.1",
+    "less-loader": "~7.3.0",
+    "style-loader": "~2.0.0",
+    "terser-webpack-plugin": "~4.2.3",
+    "url-loader": "~4.1.1",
+    "webpack": "~4.46.0",
+    "webpack-cli": "~4.7.0"
   },
   "scripts": {
     "build": "webpack",
