fix: master to main branch

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -3,13 +3,13 @@ name: Ubuntu
 on:
   push:
     branches:
-      - master
+      - main
       - 'releases/**'
     tags:
       - v*
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
