--- a/.github/workflows/raspbian.yml
+++ b/.github/workflows/raspbian.yml
@@ -3,13 +3,13 @@ name: Raspbian
 on:
   push:
     branches:
-      - master
+      - main
       - 'releases/**'
     tags:
       - v*
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
