--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Depends:
  python3,
  python3-bs4,
  python3-lxml,
- python3-ldif3,
+ python3-ldap,
  python3-vobject,
  python3-systemd
 Description: Linux call blocker, blocks unwanted calls from your home phone
