--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       matrix:
         arch: [amd64]
-        debian-version: [bullseye]
+        debian-version: [trixie]
 
     container:
       image: ${{ matrix.arch }}/debian:${{ matrix.debian-version }}-slim
@@ -36,7 +36,7 @@ jobs:
         apt-get update
         apt-get install --no-install-recommends -y \
           debhelper build-essential \
-          dpkg-dev pkg-config \
+          dpkg-dev pkgconf \
           ca-certificates wget \
           ninja-build meson \
           python3-pip python3-setuptools python3-wheel \
@@ -46,7 +46,7 @@ jobs:
 
     - name: Install build dependencies for web-interface
       run: |
-        wget -qO- https://deb.nodesource.com/setup_18.x | bash -
+        wget -qO- https://deb.nodesource.com/setup_22.x | bash -
         apt-get update
         apt-get install --no-install-recommends -y \
           nodejs
